syntax = "proto3";

package proto;

import "google/api/annotations.proto";

option go_package = "github.com/huynhtruongson/simple-todo/pb";


message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2; 
}

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/proxy/v1/login"
            body: "*"
        };
    };
}